fix little spacing between h3 title and datatable in DataTableOperation

--- a/src/components/DataTable/index.scss
+++ b/src/components/DataTable/index.scss
@@ -1,5 +1,6 @@
 table.data-table {
   width: 100%;
+  border-collapse: collapse;
   th {
     text-align: left;
     text-transform: uppercase;
